尝试封装组件，但是存在样式未打包成功的问题

--- a/2-create custom Element/module/style.css
+++ b/2-create custom Element/module/style.css
@@ -8,7 +8,7 @@
 .rating-star {
     width: 100px;
     height: 100px;
-    background-image: url(./assert/star_on.png);
+    background-image: url(../assert/star_on.png);
     background-position: center;
     background-size: cover;
 }
